--- a/Lenguaje-De-Marcas/Pagina Web/HTML/Delightfood.html
+++ b/Lenguaje-De-Marcas/Pagina Web/HTML/Delightfood.html
@@ -1,116 +1,118 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>DELIGHTFOOD</title>
-        <link rel="stylesheet" href="../CSS/delightfood.css">
-    </head>
-    <body>
-        <header>
-            <img id="imgFondo" src="../IMG/fondo.png" alt="Imagen Fondo">
-            <img id="logo" src="../IMG/logo.png" alt="Logo">
-            <h1>DELIGHT</h1>
-            <h2>FOOD</h2>
-            <button>MENU</button>
-        </header>
-        <main>
-            <nav>
-                <img src="../IMG/marcoMenu.png" alt="Marco Menu" id="marcoMenu">
-                <ul id="menu">
-                    <li><a href="../HTML/Entrantes.html">ENTRANTES</a></li>
-                    <li><a href="../HTML/Combos.html">COMBOS</a></li>
-                    <li><a href="../HTML/Platos.html">PLATOS</a></li>
-                    <li><a href="../HTML/Bebidas.html">BEBIDAS</a></li>
-                    <li><a href="../HTML/Postres.html">POSTRES</a></li>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>DELIGHTFOOD</title>
+    <link rel="stylesheet" href="../CSS/delightfood.css">
+</head>
+<body>
+<header>
+    <img id="imgFondo" src="../IMG/fondo.png" alt="Imagen Fondo">
+    <img id="logo" src="../IMG/logo.png" alt="Logo">
+    <h1>DELIGHT</h1>
+    <h2>FOOD</h2>
+    <button>MENU</button>
+</header>
+<main>
+    <nav>
+        <img src="../IMG/marcoMenu.png" alt="Marco Menu" id="marcoMenu">
+        <ul id="menu">
+            <li><a href="../HTML/Entrantes.html">ENTRANTES</a></li>
+            <li><a href="../HTML/Combos.html">COMBOS</a></li>
+            <li><a href="../HTML/Platos.html">PLATOS</a></li>
+            <li><a href="../HTML/Bebidas.html">BEBIDAS</a></li>
+            <li><a href="../HTML/Postres.html">POSTRES</a></li>
+        </ul>
+    </nav>
+    <div class="container">
+        <section class="galleryMenu">
+            <div class="plato">
+                <img src="../IMG/plato1.png" alt="Plato 1" class="fotoPlato">
+                <h3>Nigiris de salmon</h3>
+                <ul class="descripcionPlato">
+                    <li>2 piezas</li>
                 </ul>
-            </nav>
-            <section calss="galleryMenu">
-                <div class="plato">
-                    <img src="../IMG/plato1.png" alt="Plato 1" class="fotoPlato">
-                    <h3>Nigiris de salmon</h3>
-                    <ul class="descripcionPlato">
-                        <li>2 piezas</li>
+            </div>
+            <div class="plato">
+                <img src="../IMG/plato2.png" alt="Plato 2" class="fotoPlato">
+                <h3>Nigiri de atún</h3>
+                <ul class="descripcionPlato">
+                    <li>2 piezas</li>
+                </ul>
+            </div>
+            <div class="plato">
+                <img src="../IMG/plato3.png" alt="Plato 3" class="fotoPlato">
+                <h3>Nigiri de gamba</h3>
+                <ul class="descripcionPlato">
+                    <li>2 piezas</li>
+                </ul>
+            </div>
+            <div class="plato">
+                <img src="../IMG/plato4.png" alt="Plato 4" class="fotoPlato">
+                <h3>Nigiri de salmón fumé a la trufa</h3>
+                <ul class="descripcionPlato">
+                    <li>2 piezas</li>
+                </ul>
+            </div>
+            <div class="plato">
+                <img src="../IMG/plato5.png" alt="Plato 5" class="fotoPlato">
+                <h3>Nigiris de salmon</h3>
+                <ul class="descripcionPlato">
+                    <li>2 piezas</li>
+                </ul>
+            </div>
+            <div class="plato">
+                <img src="../IMG/plato6.png" alt="Plato 6" class="fotoPlato">
+                <h3>Nigiris de salmon</h3>
+                <ul class="descripcionPlato">
+                    <li>2 piezas</li>
+                </ul>
+            </div>
+            <div class="plato">
+                <img src="../IMG/plato7.png" alt="Plato 7" class="fotoPlato">
+                <h3>Nigiris de salmon</h3>
+                <ul class="descripcionPlato">
+                    <li>2 piezas</li>
+                </ul>
+            </div>
+            <div class="plato">
+                <img src="../IMG/plato8.png" alt="Plato 8" class="fotoPlato">
+                <h3>Nigiris de salmon</h3>
+                <ul class="descripcionPlato">
+                    <li>2 piezas</li>
+                </ul>
+            </div>
+        </section>
+        <aside>
+            <img src="../IMG/separador.png" alt="Separador" id="separador">
+            <div>
+                <img id="imgFondoAside" src="../IMG/fondo.png" alt="Imagen Fondo Aside">
+                <h1>DELIGHT</h1>
+                <h2>FOOD</h2>
+                <div id="pedido">
+                    <h3>Información Pedidos</h3>
+                    <ul id="descripcionPedido">
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
                     </ul>
+                    <button id="botonPedido">Pedir</button>
                 </div>
-                <div class="plato">
-                    <img src="../IMG/plato2.png" alt="Plato 2" class="fotoPlato">
-                    <h3>Nigiri de atún</h3>
-                    <ul class="descripcionPlato">
-                        <li>2 piezas</li>
-                    </ul>
-                </div>
-                <div class="plato">
-                    <img src="../IMG/plato3.png" alt="Plato 3" class="fotoPlato">
-                    <h3>Nigiri de gamba</h3>
-                    <ul class="descripcionPlato">
-                        <li>2 piezas</li>
-                    </ul>
-                </div>
-                <div class="plato">
-                    <img src="../IMG/plato4.png" alt="Plato 4" class="fotoPlato">
-                    <h3>Nigiri de salmón fumé a la trufa</h3>
-                    <ul class="descripcionPlato">
-                        <li>2 piezas</li>
-                    </ul>
-                </div>
-                <div class="plato">
-                    <img src="../IMG/plato5.png" alt="Plato 5" class="fotoPlato">
-                    <h3>Nigiris de salmon</h3>
-                    <ul class="descripcionPlato">
-                        <li>2 piezas</li>
-                    </ul>
-                </div>
-                <div class="plato">
-                    <img src="../IMG/plato6.png" alt="Plato 6" class="fotoPlato">
-                    <h3>Nigiris de salmon</h3>
-                    <ul class="descripcionPlato">
-                        <li>2 piezas</li>
-                    </ul>
-                </div>
-                <div class="plato">
-                    <img src="../IMG/plato7.png" alt="Plato 7" class="fotoPlato">
-                    <h3>Nigiris de salmon</h3>
-                    <ul class="descripcionPlato">
-                        <li>2 piezas</li>
-                    </ul>
-                </div>
-                <div class="plato">
-                    <img src="../IMG/plato8.png" alt="Plato 8" class="fotoPlato">
-                    <h3>Nigiris de salmon</h3>
-                    <ul class="descripcionPlato">
-                        <li>2 piezas</li>
-                    </ul>
-                </div>
-            </section>
-            <aside>
-                <img src="../IMG/separador.png" alt="Separador" id="separador">
-                <div>
-                    <img id="imgFondoAside" src="../IMG/fondo.png" alt="Imagen Fondo Aside">
-                    <h1>DELIGHT</h1>
-                    <h2>FOOD</h2>
-                    <div id="pedido">
-                        <h3>Información Pedidos</h3>
-                        <ul id="descripcionPedido">
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                        </ul>
-                        <button id="botonPedido">Pedir</button>
-                    </div>
-                </div>
-            </aside>  
-        </main>
-        <footer>
-            <img src="../IMG/marcoFooter" alt="Marco Footer">
-            <ul class="elementosFooter">
-                <li><a href="../HTML/Contacto.html">Contacto</a></li>
-                <li><a href="../HTML/Política de Privacidad.html">Política de Privacidad</a></li>
-                <li><a href="../HTML/Cookies.html">Cookeis</a></li>
-                <li><p>2024 | Delightfood</p></li>
-            </ul>
-        </footer>
-    </body>
+            </div>
+        </aside>
+    </div>
+</main>
+<footer>
+    <img src="../IMG/marcoFooter" alt="Marco Footer">
+    <ul class="elementosFooter">
+        <li><a href="../HTML/Contacto.html">Contacto</a></li>
+        <li><a href="../HTML/Política de Privacidad.html">Política de Privacidad</a></li>
+        <li><a href="../HTML/Cookies.html">Cookeis</a></li>
+        <li><p>2024 | Delightfood</p></li>
+    </ul>
+</footer>
+</body>
 </html>
