--- a/Segunda entrega/Lenguaje de Marcas/CSS Section Reservas/delightfoodv2.html
+++ b/Segunda entrega/Lenguaje de Marcas/CSS Section Reservas/delightfoodv2.html
@@ -78,26 +78,23 @@
         </section>
     </main>
     <footer>
-        <img src="../IMG/logo" alt="Logo">
+        <img src="/recursos/LogoSushiVect.png" alt="Logo">
         <div class="footer-contacto">
+            <h2 class="footer-h2">Contacto</h2>
             <p class="footer-label">Email:</p>
             <p>soporte@delightfood.com</p>
             <p class="footer-label">Teléfono:</p>
             <p>987654321</p>
-            <p class="footer-label">Redes Sociales:</p>
-            <ul>
-                <li><a href="#"><img src="../IMG/facebook" alt="Facebook"></a></li>
-                <li><a href="#"><img src="../IMG/twitter" alt="Twitter"></a></li>
-                <li><a href="#"><img src="../IMG/instagram" alt="Instagram"></a></li>
-            </ul>
         </div>
         <div class="footer-horarios">
+            <h2 class="footer-h2">Horarios</h2>
             <p class="footer-label">Lunes - Jueves</p>
             <p>12:00 - 15:00 / 20:00 - 22:00</p> 
             <p class="footer-label">Viernes - Sábado</p>
             <p>13:00 - 15:00 / 21:00 - 00:00</p>   
         </div>
         <div class="footer-politicas">
+            <h2 class="footer-h2">Políticas</h2>
             <ul>
                 <li><a href="#">Política de Privacidad</a></li>
                 <li><a href="#">Términos y Condiciones</a></li>
