Añadido header y mejorado aspectos de la web

--- a/Tercera Entrega - Diana/HTML + CSS/delightfoodv2.html
+++ b/Tercera Entrega - Diana/HTML + CSS/delightfoodv2.html
@@ -17,14 +17,17 @@
 
 <body>
     <header>
-        <img class="logo" id="header-logo" src="./IMG/logo.png" alt="Logo">
-        <nav id="menu">
+        <img src="./IMG/logo.png" alt="Logo">
+
+        <nav>
             <ul>
-                <li><a href="#">INICIO</a></li>
-                <li><a href="#">MENU</a></li>
-                <li><a href="#">RESERVAR</a></li>
+                <li><a href="">INICIO</a></li>
+                <li><a href="">MENU</a></li>
+                <li><a href="">RESERVAR</a></li>
             </ul>
         </nav>
+
+
     </header>
     <main>
         <section id="first-page">
