--- a/Tercera Entrega - Diana/HTML + CSS/delightfoodv2.html
+++ b/Tercera Entrega - Diana/HTML + CSS/delightfoodv2.html
@@ -38,7 +38,7 @@
     <main>
         <section id="first-page">
             <img src="./IMG/IMGfondo.png" alt="Imagen Fondo">
-            <button>Menu</button>
+            <button>MENU</button>
         </section>
 
         <section id="aboutUs">
