Añadido HEADER Responsive

--- a/Tercera Entrega - Diana/HTML + CSS/delightfoodv2.html
+++ b/Tercera Entrega - Diana/HTML + CSS/delightfoodv2.html
@@ -33,7 +33,9 @@
             </ul>
         </nav>
 
-
+        <div>
+            <img src="./IMG/burger.png">
+        </div>
     </header>
     <main>
         <section id="first-page">
